data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1139.wast
;; 10. **Test Case 10**: A `loop` block where the `br_table` includes an index that falls exactly at the boundary of the available targets (upper limit).     - **Constraint**: Ensuring precise boundary condition handling at the limit of valid indices.     - **Relation to br_table Edge Case**: Verifies differential behavior at the upper boundary of target index lists within loops.

(assert_invalid
  (module (func $br_table_with_boundary
    (loop 
      (block 
        (br_table 0 1 (i32.const 1))))))) 
  "invalid branch target")